<resources>
    <string name="app_name">IUASampleAppKotlin</string>

    <!-- color region -->
    <string name="red">Red</string>
    <string name="indigo">Indigo</string>
    <string name="green">Green</string>
    <string name="orange">Orange</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>>
    <string name="grey">Grey</string>
    <string name="bluegrey">Blue Grey</string>
    <string name="amber">Amber</string>
    <string name="teal">Teal</string>
    <string name="deeppurple">Deep Purple</string>
    <string name="cyan">Cyan</string>
    <string name="brown">Brown</string>


    <string name="redHex">#F44336</string>
    <string name="indigoHex">#3F51B5</string>
    <string name="greenHex">#4CAF50</string>
    <string name="orangeHex" type="color">#FF9800</string>
    <string name="blueHex" type="color">#2196F3</string>
    <string name="yellowHex" type="color">#FFEB3B</string>>
    <string name="greyHex" type="color">#607D8B</string>

    <string name="tealHex" type="color">#009688</string>
    <string name="deeppurpleHex" type="color">#673AB7</string>
    <string name="cyanHex" type="color">#00BCD4</string>
    <string name="brownHex" type="color">#795548</string>

    <string name="button_go_to_movie_list">INTENTS!</string>
    <string name="button_go_to_recylcer_view">RECYCLER VIEWS!</string>
    <string name="button_go_to_fragments">FRAGMENTS</string>
    <string name="button_go_to_scan_qr">ESCANEAR QR</string>
    <string name="button_go_to_callbacks">CALLBACKS</string>
    <string name="button_go_to_product_list">LISTA PRODUCTOS (RECYCLER)</string>
    <string name="button_go_to_navigation_drawer">NAVIGATION DRAWER</string>
    <string name="button_go_to_navigation_database_inspect">BASE DE DATOS</string>
    <string name="button_go_to_navigation_networking_activity">NETOWRKING</string>



</resources>